fix: hide keyboard shortcut menu on mobile

--- a/src/components/help-menu.module.css
+++ b/src/components/help-menu.module.css
@@ -1,3 +1,11 @@
+.action-shortcuts {
+  display: none;
+
+  @media (hover: hover) and (pointer: fine) {
+    display: flex;
+  }
+}
+
 .groups > * + * {
   margin-top: 1rem;
 }
