--- a/src/components/ui/button.module.css
+++ b/src/components/ui/button.module.css
@@ -42,7 +42,6 @@ a.button {
 }
 
 .button.full {
-  display: flex;
   width: 100%;
 }
 
